@@ -233,3 +233,5 @@ No habilita boton de cerrar todas las ventanas
 
 
 -conviene ocultar Wall y Wextra en version estable? puede salir algun warning util solo en version estable? no deberia, son warnings muy especificos
+
+-opcion que al hacer full screen desactive zx desktop. y vuelva a activarlo al salir del modo
