@@ -105,5 +105,7 @@ extern z80_bit debug_view_basic_show_address;
 
 extern int gui_language;
 
+extern int zxdesktop_disable_on_full_screen;
+
 #endif
 
