@@ -9,7 +9,8 @@ Improved Debug CPU:
 -added t-states counter on default view
 
 Improved ZX Vision:
--Improved ZX Desktop: allow to set a background SCR file
+-ZX Desktop: allow to set a background SCR file
+-ZX Desktop: added setting to disable ZX Desktop when going to full screen 
 -Better detection of any file size of 6912 bytes is guessed as Spectrum screen
 
 Fixed disabling border when realvideo enabled on machines: Colecovision, Master System, MSX, SG1000, SpectraVideo
